# tfc-toolset

./: .gitignore  CNAME  Cargo.toml  FILTERING.md  README.md  custom.css  index.html  oranda-workspace.json  oranda.json
.assets/: index.md
.assets/styles/: oranda.css
.github/workflows/: ci.yml  coverage.yml  msrv.yml  release.yml  rust.yml  web.yml
clean-workspace/: Cargo.toml  README.md  settings.toml.example
clean-workspace/src/: error.rs  main.rs  parse.rs  repo.rs  report.rs  settings.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/libraries/: libraries.md  tfc-toolset-extras.md  tfc-toolset.md
docs/src/tools/: tools.md
docs/src/tools/tfct/: installation.md  tfct.md
docs/src/tools/tfct/commands/: commands.md  help.md  tag.md  variable-set.md  variable.md
docs/src/tools/tfct/commands/clean/: clean.md  workspace.md
docs/src/tools/tfct/commands/run/: apply.md  cancel.md  discard.md  plan.md  run.md  spec.md  status.md
docs/src/tools/tfct/commands/tag/: add.md  list.md  remove.md  tag.md
docs/src/tools/tfct/commands/variable/: create.md  delete.md  list.md  variable.md
docs/src/tools/tfct/commands/variable-set/: apply.md  remove.md  variable-set.md
docs/src/tools/tfct/commands/workspace/: create.md  delete.md  list.md  show.md  update.md  workspace.md
docs/src/tools/tfct/configuration/: configuration.md  filtering.md
examples/tfc-clean-workspace/: Cargo.toml  settings.toml.example
examples/tfc-clean-workspace/src/: main.rs  parse.rs  repo.rs  report.rs
examples/tfc-report/: Cargo.toml
examples/tfc-report-tui/: Cargo.toml
examples/tfc-report-tui/src/: home.rs  info.rs  main.rs  report.rs  workspaces.rs
examples/tfc-report/src/: lib.rs
examples/tfc-run-workspace/: Cargo.toml  settings.toml.example
examples/tfc-run-workspace/src/: main.rs  report.rs  settings.rs
examples/tfc-variable-set/: Cargo.toml  settings.toml.example
examples/tfc-variable-set/src/: main.rs  report.rs
examples/tfc-which-workspace/: Cargo.toml  settings.toml.example
examples/tfc-which-workspace/src/: main.rs  report.rs
report-tui/: Cargo.toml  README.md
report-tui/src/: home.rs  info.rs  main.rs  report.rs  workspaces.rs
tfc-clean-workspace/: Cargo.toml
tfc-clean-workspace/src/: main.rs  repo.rs  report.rs
tfc-report-tui/: Cargo.toml
tfc-report-tui/src/: main.rs  report.rs  workspaces.rs
tfc-run-workspace/: Cargo.toml  settings.toml.example
tfc-run-workspace/src/: main.rs  report.rs  settings.rs
tfc-toolset/: Cargo.toml  README.md  index.html  oranda.json
tfc-toolset-extras/: Cargo.toml  README.md  index.html  oranda.json
tfc-toolset-extras/book/: 404.html  introduction.html
tfc-toolset-extras/book/libraries/: libraries.html  tfc-toolset.html
tfc-toolset-extras/book/tools/tfct/: installation.html
tfc-toolset-extras/book/tools/tfct/commands/: commands.html
tfc-toolset-extras/book/tools/tfct/commands/tag/: add.html  tag.html
tfc-toolset-extras/book/tools/tfct/commands/variable-set/: apply.html
tfc-toolset-extras/book/tools/tfct/commands/workspace/: delete.html  list.html  show.html  update.html
tfc-toolset-extras/book/tools/tfct/configuration/: filtering.html
tfc-toolset-extras/src/: error.rs  lib.rs  report.rs
tfc-toolset-extras/src/file/: mod.rs  tag.rs  variable.rs  workspace.rs
tfc-toolset-extras/src/file/input/: tag.rs  variable.rs  workspace.rs
tfc-toolset/book/: searchindex.js
tfc-toolset/book/libraries/: tfc-toolset-extras.html
tfc-toolset/book/tools/: tools.html
tfc-toolset/book/tools/tfct/commands/clean/: clean.html  workspace.html
tfc-toolset/book/tools/tfct/commands/run/: discard.html  plan.html  status.html
tfc-toolset/book/tools/tfct/commands/tag/: list.html
tfc-toolset/book/tools/tfct/commands/variable-set/: remove.html  variable-set.html
tfc-toolset/src/: error.rs  filter.rs  lib.rs  run.rs  settings.rs  tag.rs  variable.rs  variable_set.rs  workspace.rs
tfc-toolset/src/filter/: workspace.rs
tfc-variable-set/: Cargo.toml  README.md
tfc-variable-set/src/: main.rs  report.rs
tfc-which-workspace/: Cargo.toml  README.md  oranda.json
tfc-which-workspace/src/: main.rs  report.rs
tfct/: Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  settings.toml.example  tfct-installer.ps1.txt  tfct-installer.sh.txt
tfct/artifacts/: index.html
tfct/book/: print.html  searchindex.json
tfct/book/tools/tfct/: tfct.html
tfct/book/tools/tfct/commands/: help.html
tfct/book/tools/tfct/commands/run/: cancel.html  run.html  spec.html
tfct/book/tools/tfct/commands/tag/: remove.html
tfct/book/tools/tfct/commands/variable/: create.html  delete.html  list.html  variable.html
tfct/book/tools/tfct/commands/workspace/: create.html  workspace.html
tfct/book/tools/tfct/configuration/: configuration.html
tfct/changelog/: index.html
tfct/changelog/tfct/v0.1.0/: index.html
tfct/changelog/tfct/v0.1.0-alpha.5/: index.html
tfct/changelog/tfct/v0.1.0-alpha1/: index.html
tfct/changelog/tfct/v0.1.0-alpha2/: index.html
tfct/changelog/tfct/v0.1.0-alpha3/: index.html
tfct/changelog/tfct/v0.1.0-alpha4/: index.html
tfct/changelog/tfct/v0.2.1/: index.html
tfct/changelog/tfct/v0.3.0/: index.html
tfct/changelog/tfct/v0.4.0/: index.html
tfct/changelog/tfct/v0.4.1/: index.html
tfct/src/: error.rs  main.rs  settings.rs
tfct/src/cli/: mod.rs
tfct/src/cli/command/: common.rs  mod.rs
tfct/src/cli/command/clean/: about.rs  mod.rs  workspace.rs
tfct/src/cli/command/run/: about.rs  apply.rs  cancel.rs  discard.rs  mod.rs  plan.rs  spec.rs  status.rs
tfct/src/cli/command/tag/: about.rs  add.rs  list.rs  mod.rs  remove.rs
tfct/src/cli/command/variable/: about.rs  create.rs  delete.rs  list.rs  mod.rs
tfct/src/cli/command/variable_set/: about.rs  apply.rs  mod.rs  remove.rs
tfct/src/cli/command/workspace/: about.rs  create.rs  delete.rs  list.rs  mod.rs  show.rs  update.rs
tfct/wix/: main.wxs
which-workspace/: Cargo.toml  README.md  settings.toml.example
which-workspace/src/: main.rs  report.rs
