[package]
name = "tfc-clean-workspace"
version = "0.1.0"
description = "Scrubbing bubbles for your Terraform Cloud workspaces"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.61.0"

[[bin]]
name = "clean-workspace"
path = "src/main.rs"

[lib]
name = "tfc_clean_workspace"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-std = { version = "1.12.0", features = ["attributes"] }
async-scoped = { version = "0.7.1", features = ["use-async-std"] }
clap = { version = "4.0.29", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
git2 = { version = "0.15.0", features = ["vendored-libgit2", "vendored-openssl"] }
git2_credentials = "0.9.1"
hcl-rs = "0.10.0"
log = "0.4.17"
miette = { version = "5.5.0", features = ["fancy"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
surf = "2.3.2"
thiserror = "1.0.37"
url = "2.3.1"
walkdir = "2.3.2"

[dependencies.tfc-toolset]
path = "../tfc-toolset"
version = "0.1.0"

[dependencies.tfc-toolset-extras]
path = "../tfc-toolset-extras"
version = "0.1.0"
