[package]
name = "tfc-report-tui"
version = "0.1.0"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
edition = "2021"

[[bin]]
name = "report-tui"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.23.2", features = [ "serde" ] }
serde_json = "1.0.81"
tui = { version = "0.18.0", default-features = false, features = ['crossterm', 'serde'] }
miette = { version = "4.7.1", features = ["fancy"] }
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }

[dependencies.tfc-toolset]
path = "../tfc-toolset"
version = "0.1.0"

[dependencies.tfc-toolset-extras]
path = "../tfc-toolset-extras"
version = "0.1.0"

[dependencies.tfc-which-workspace]
path = "../which-workspace"
version = "0.1.0"

[dependencies.tfc-clean-workspace]
path = "../clean-workspace"
version = "0.1.0"
