[package]
name = "tfc-report-tui"
version = "0.1.0"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
edition = "2021"

[[bin]]
name = "report-tui"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.25.0", features = [ "serde" ] }
serde_json = "1.0.89"
tui = { version = "0.19.0", default-features = false, features = ['crossterm', 'serde'] }
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = "1.0.37"
serde = { version = "1.0.149", features = ["derive"] }
unicode-width = "0.1.10"

[dependencies.tfc-toolset]
path = "../tfc-toolset"
version = "0.1.0"

[dependencies.tfc-toolset-extras]
path = "../tfc-toolset-extras"
version = "0.1.0"

[dependencies.tfc-which-workspace]
path = "../which-workspace"
version = "0.1.0"

[dependencies.tfc-clean-workspace]
path = "../clean-workspace"
version = "0.1.0"
