[package]
name = "tfc-report-tui"
version = "0.1.0"
description = "Read generated reports in a tui"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.67.1"

[[bin]]
name = "tfc-report-tui"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.27.0", features = [ "serde" ] }
serde_json = "1.0.107"
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.49"
serde = { version = "1.0.188", features = ["derive"] }
unicode-width = "0.1.11"
ratatui = { version = "0.23.0", default-features = false, features = ['crossterm', 'serde'] }

[dependencies.tfc-toolset]
path = "../tfc-toolset"
version = "0.1.0"

[dependencies.tfc-toolset-extras]
path = "../tfc-toolset-extras"
version = "0.1.0"

[dependencies.tfc-which-workspace]
path = "../tfc-which-workspace"
version = "0.1.0"

[dependencies.tfc-clean-workspace]
path = "../tfc-clean-workspace"
version = "0.1.0"
