[package]
name = "tfc-toolset-extras"
version = "0.2.2"
description = "Extra stuff for tfc-toolset you may or may not want to use"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
homepage = "https://tfc-toolset.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71.1"

[dependencies]
anyhow = "1.0.75"
config = "0.14.0"
dirs = "5.0.1"
http-cache-surf = "0.12.0"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }
surf-governor = "0.2.0"
surf-retry = "0.3.2"
thiserror = "1.0.50"
url = "2.4.1"

[dependencies.tfc-toolset]
path = "../tfc-toolset"
version = "0.5.0"
