[package]
name = "tfc-toolset"
version = "0.1.0"
description = "A toolset to help manage a toolset that helps manage your deployments"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.67.1"

[dependencies]
anyhow = "1.0.75"
async-scoped = { version = "0.7.1", features = ["use-async-std"] }
async-std = { version = "1.12.0", default-features = false }
config = "0.13.3"
dashmap = { version = "5.5.3", features = ["serde"] }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
surf = { version = "2.3.2", default-features = false }
thiserror = "1.0.49"
url = "2.4.1"
