[package]
name = "tfc-toolset"
version = "0.5.0"
description = "A toolset to help manage a toolset that helps manage your deployments"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
homepage = "https://tfc-toolset.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["terraform", "cloud", "api", "toolset"]
categories = [
    "api-bindings"
]
edition = "2021"
rust-version = "1.71.1"

[dependencies]
anyhow = "1.0.80"
async-scoped = { version = "0.9.0", features = ["use-async-std"] }
async-std = { version = "1.12.0", default-features = false }
config = "0.14.0"
itertools = "0.12.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surf = { version = "2.3.2", default-features = false }
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["serde", "parsing", "formatting", "serde-well-known"] }
url = "2.5.0"
