[package]
name = "tfct"
version = "0.3.0"
description = "A tool to help manage a toolset that helps manage your deployments"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
homepage = "https://tfc-toolset.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["terraform", "cloud", "api", "toolset"]
categories = [
    "command-line-utilities"
]
edition = "2021"
rust-version = "1.71.1"

[package.metadata.wix]
upgrade-guid = "5ED7AE6B-E7ED-40DC-A33B-F816903029B2"
path-guid = "B8F8DC64-E27C-4E8A-813F-1DF1C5B27F48"

[[bin]]
name = "tfct"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
async-scoped = { version = "0.9.0", features = ["use-async-std"] }
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
config = "0.14.0"
dirs = "5.0.1"
env_logger = "0.11.2"
git2 = { version = "0.18.2", features = ["vendored-libgit2", "vendored-openssl"] }
git2_credentials = "0.13.0"
hcl-rs = "0.16.7"
log = "0.4.21"
miette = { version = "7.1.0", features = ["fancy"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surf = { version = "2.3.2", default-features = false, features = ["encoding", "h1-client-rustls"] }
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["serde", "parsing", "formatting", "serde-well-known"] }
url = "2.5.0"
walkdir = "2.5.0"

[dependencies.tfc-toolset]
path = "../tfc-toolset"
version = "0.5.0"

[dependencies.tfc-toolset-extras]
path = "../tfc-toolset-extras"
version = "0.2.2"
