[package]
name = "tfc-clean-workspace"
version = "0.1.0"
description = "Scrubbing bubbles for your Terraform Cloud workspaces"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.67.1"
publish = false

[[bin]]
name = "tfc-clean-workspace"
path = "src/main.rs"

[lib]
name = "tfc_clean_workspace"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-scoped = { version = "0.7.1", features = ["use-async-std"] }
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.6", features = ["derive"] }
config = "0.13.3"
env_logger = "0.10.0"
git2 = { version = "0.18.1", features = ["vendored-libgit2", "vendored-openssl"] }
git2_credentials = "0.13.0"
hcl-rs = "0.16.6"
log = "0.4.20"
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
surf = { version = "2.3.2", default-features = false, features = ["encoding", "h1-client-rustls"] }
thiserror = "1.0.49"
url = "2.4.1"
walkdir = "2.4.0"

[dependencies.tfc-report]
path = "../tfc-report"
version = "0.1.0"

[dependencies.tfc-toolset]
path = "../../tfc-toolset"
version = "0.2.0"

[dependencies.tfc-toolset-extras]
path = "../../tfc-toolset-extras"
version = "0.1.0"
