[package]
name = "tfc-clean-workspace"
version = "0.1.0"
description = "Scrubbing bubbles for your Terraform Cloud workspaces"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71.1"
publish = false

[[bin]]
name = "tfc-clean-workspace"
path = "src/main.rs"

[lib]
name = "tfc_clean_workspace"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.80"
async-scoped = { version = "0.9.0", features = ["use-async-std"] }
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.5.1", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.2"
git2 = { version = "0.18.2", features = ["vendored-libgit2", "vendored-openssl"] }
git2_credentials = "0.13.0"
hcl-rs = "0.16.7"
log = "0.4.21"
miette = { version = "7.1.0", features = ["fancy"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surf = { version = "2.3.2", default-features = false, features = ["encoding", "h1-client-rustls"] }
thiserror = "1.0.57"
url = "2.5.0"
walkdir = "2.5.0"

[dependencies.tfc-report]
path = "../tfc-report"
version = "0.1.0"

[dependencies.tfc-toolset]
path = "../../tfc-toolset"
version = "0.5.0"

[dependencies.tfc-toolset-extras]
path = "../../tfc-toolset-extras"
version = "0.2.2"
