[package]
name = "tfc-report"
version = "0.1.0"
description = "Generate reports"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71.1"
publish = false

[lib]
name = "tfc_report"
path = "src/lib.rs"

[dependencies]
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[dependencies.tfc-toolset]
path = "../../tfc-toolset"
version = "0.5.0"


