[package]
name = "tfc-variable-set"
version = "0.1.0"
description = "Manages Terraform Cloud variable sets yay!"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71.1"
publish = false

[[bin]]
name = "tfc-variable-set"
path = "src/main.rs"

[lib]
name = "tfc_variable_set"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.7", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.2"
log = "0.4.20"
miette = { version = "7.1.0", features = ["fancy"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
surf = { version = "2.3.2", default-features = false, features = ["encoding", "h1-client-rustls"] }
thiserror = "1.0.50"
url = "2.4.1"

[dependencies.tfc-report]
path = "../tfc-report"
version = "0.1.0"

[dependencies.tfc-toolset]
path = "../../tfc-toolset"
version = "0.5.0"

[dependencies.tfc-toolset-extras]
path = "../../tfc-toolset-extras"
version = "0.2.2"
