[package]
name = "tfc-which-workspace"
version = "0.1.0"
description = "Super specific tool for a super specific purpose"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
repository = "https://github.com/06chaynes/tfc-toolset.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.71.1"
publish = false

[[bin]]
name = "tfc-which-workspace"
path = "src/main.rs"

[lib]
name = "tfc_which_workspace"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.80"
async-std = { version = "1.12.0", features = ["attributes"] }
config = "0.14.0"
env_logger = "0.11.2"
log = "0.4.21"
miette = { version = "7.1.0", features = ["fancy"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surf = { version = "2.3.2", default-features = false, features = ["encoding", "h1-client-rustls"] }
thiserror = "1.0.57"
url = "2.5.0"

[dependencies.tfc-report]
path = "../tfc-report"
version = "0.1.0"

[dependencies.tfc-toolset]
path = "../../tfc-toolset"
version = "0.6.0"

[dependencies.tfc-toolset-extras]
path = "../../tfc-toolset-extras"
version = "0.2.2"
